# fc.http_rest_client

./: README.md  pyproject.toml
http_rest_client/: auth0_command_handler.py  command_dispatch.py  http_client.py
tests/: test_http_client.py
