[tool.poetry]
name = "fc-http-rest-client"
version = "0.1.0"
description = "Client to connect by http with other clients"
authors = ["chaconfrank <frankchaconcrescini@outlook.com>"]
readme = "README.md"
packages = [{include = "http_rest_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
cache = "^1.0.3"
requests-mock = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "http_rest_client"